# win32_shortcut_parameters

./: Cargo.toml
examples/: msg_box.rs
src/: lib.rs  main.rs
