[package]
name = "win32_shortcut_parameters"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnk = "0.3"
widestring = "0.4"
winapi = { version = "0.3.9", features = ["processthreadsapi", "impl-default"] }

[dev-dependencies]
msgbox = "0.6"
notepad_logger = "0.1"
log = "0.4"
 